--- a/app/src/main/res/layout/item_device.xml
+++ b/app/src/main/res/layout/item_device.xml
@@ -6,57 +6,48 @@
     android:layout_margin="4dp">
 
     <ImageView
-        android:id="@+id/DeviceImage"
+        android:id="@+id/DeviceItemImage"
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:layout_margin="4dp"
         android:background="@drawable/squre_border"
-        android:contentDescription="@string/device_image"
+        android:contentDescription="@string/Device_Image"
         android:padding="4dp"
         android:src="@drawable/ic_lightbulb"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/DeviceName" />
+        app:layout_constraintTop_toTopOf="@+id/DeviceItemName" />
 
     <TextView
-        android:id="@+id/DeviceClass"
-        style="@style/ROBOTO_Regular"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="4dp"
-        android:padding="4dp"
-        android:text="@string/Device_Class"
-        app:layout_constraintStart_toEndOf="@+id/DeviceImage"
-        app:layout_constraintTop_toBottomOf="@+id/DeviceValue" />
-
-    <TextView
-        android:id="@+id/DeviceValue"
-        style="@style/ROBOTO_Regular"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="4dp"
-        android:padding="4dp"
-        android:text="@string/Device_Value"
-        app:layout_constraintStart_toEndOf="@+id/DeviceImage"
-        app:layout_constraintTop_toBottomOf="@+id/DeviceName" />
-
-    <TextView
-        android:id="@+id/DeviceName"
+        android:id="@+id/DeviceItemName"
         style="@style/ROBOTO_Regular"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
         android:padding="4dp"
         android:text="@string/Device_Name"
-        app:layout_constraintStart_toEndOf="@+id/DeviceImage"
+        android:textSize="16sp"
+        app:layout_constraintStart_toEndOf="@+id/DeviceItemImage"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/DeviceActions"
+        android:id="@+id/DeviceItemActions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
         android:padding="4dp"
+        android:contentDescription="@string/Item_Settings"
         android:src="@drawable/ic_more"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/DeviceItemClass"
+        style="@style/ROBOTO_Regular"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="4dp"
+        android:padding="4dp"
+        android:text="@string/Device_Class"
+        app:layout_constraintStart_toEndOf="@+id/DeviceItemImage"
+        app:layout_constraintTop_toBottomOf="@+id/DeviceItemName" />
 </android.support.constraint.ConstraintLayout>
