--- a/app/src/main/res/layout/fragment_device_control.xml
+++ b/app/src/main/res/layout/fragment_device_control.xml
@@ -82,7 +82,7 @@
         app:layout_constraintTop_toBottomOf="@+id/DeviceMajorClassControl" />
 
     <Button
-        android:id="@+id/DeviceButton"
+        android:id="@+id/DeviceButtonPair"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
