Starting Voice Assistant

--- a/app/src/main/res/layout/fragment_device_control.xml
+++ b/app/src/main/res/layout/fragment_device_control.xml
@@ -9,7 +9,7 @@
         android:layout_width="128dp"
         android:layout_height="128dp"
         android:layout_margin="4dp"
-        android:background="@drawable/squre_border"
+        android:background="@drawable/circle_border"
         android:contentDescription="@string/Device_Image"
         android:padding="16dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,9 +87,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:background="@drawable/button_solid"
         android:text="@string/bluetoothaction1"
-        app:layout_constraintEnd_toStartOf="@+id/DeviceButtonUnPair"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/DeviceClassControl" />
 
@@ -99,22 +98,20 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:background="@drawable/button_solid"
         android:text="@string/bluetoothaction2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/DeviceButtonPair"
         app:layout_constraintTop_toBottomOf="@+id/DeviceClassControl" />
 
     <Button
         android:id="@+id/DeviceButtonConnection"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/button_solid"
         android:text="@string/bluetoothaction3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/DeviceButtonUnPair"
         app:layout_constraintTop_toBottomOf="@+id/DeviceClassControl" />
 
 
@@ -138,6 +135,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:text="@string/bluetoothaction4"
+        android:background="@drawable/button_solid"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/DeviceConsole" />
 
@@ -149,6 +147,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
+        android:autofillHints="@string/Message_hint"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toStartOf="@+id/DeviceButtonSendMessage"
         app:layout_constraintStart_toStartOf="parent"
