--- a/app/src/main/res/layout/item_device.xml
+++ b/app/src/main/res/layout/item_device.xml
@@ -11,7 +11,7 @@
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:layout_margin="4dp"
-        android:background="@drawable/squre_border"
+        android:background="@drawable/circle_border"
         android:contentDescription="@string/Device_Image"
         android:padding="16dp"
         android:src="@drawable/ic_lightbulb"
@@ -37,8 +37,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
         android:ellipsize="end"
         android:padding="4dp"
         android:text="@string/Device_Name"
@@ -57,9 +55,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
-        android:layout_marginEnd="8dp"
         android:ellipsize="end"
         android:padding="4dp"
+        android:textSize="12sp"
         android:text="@string/Device_Class"
         app:layout_constrainedWidth="true"
         app:layout_constraintStart_toEndOf="@+id/DeviceItemImage"
@@ -75,10 +73,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="8dp"
         android:padding="4dp"
         android:ellipsize="end"
+        android:textSize="12sp"
         android:text="@string/Device_Bonded"
         app:layout_constrainedWidth="true"
         app:layout_constraintEnd_toStartOf="@+id/DeviceItemActions"
