--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#373740</color>
-    <color name="colorPrimaryDark">#373740</color>
-    <color name="colorAccent">#ff4181</color>
-    <color name="colorBackground">#424250</color>
+    <color name="colorPrimary">#FF6978</color>
+    <color name="colorPrimaryDark">#0D1321</color>
+    <color name="colorAccent">#3E5C76</color>
+    <color name="textColor">#FFFCF9</color>
+    <color name="shapeColor">#FF6978</color>
+    <color name="borderColor">#6D435A</color>
+    <color name="colorBackground">#1D2D44</color>
     <color name="colorForeground">#000000</color>
-    <color name="navigationBarColor">#4f5b62</color>
+    <color name="navigationBarColor">#0D1321</color>
     <color name="textColorPrimary">#ffffff</color>
     <color name="textColorPrimaryInverse">#ffffff</color>
     <color name="textColorSecondary">#ffffff</color>
     <color name="textColorSecondaryInverse">#ffffff</color>
+
 </resources>
